progs/tests/blob/field_get_faulty.sy
A :: blob { a: int }
a := A! { a: 1 }
start :: fn {
    a.b = a.b + 1
    a.a = f! a.b
}

f :: fn a:int -> int {
    ret a
}

// error: #UnknownField(_, _)
// error: #UnknownField(_, _)
// error: #UnknownField(_, _)
// error: #ArgumentType(_, _)
// error: #TypeMismatch(_, _)
